--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#App name
 spring.application.name=productManager
+
+#Datasource configurations
+spring.datasource.url=jdbc:mysql://localhost:3300/product_manager_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=31415
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA/Hibernate configurations
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
